--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,14 @@
-[build-system]
-requires = "python >= 3.8"
-
-[project]
+[tool.poetry]
 name = "rainbow"
-version = "1.0.0"
-
-[dependencies]
-sense_hat = "^4.1.0"
+version = "0.1.0"
+description = "A project that utilizes the sense-hat library for Python 3"
+authors = ["Viktor Konkov <raspberry400@mail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-
-[tool.poetry.dev-dependencies]
+python = "^3.6"
+sense-hat = "*"
 
 [build-system]
-requires = "python >= 3.8"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
